--- a/stylesheets/cosmhack.css
+++ b/stylesheets/cosmhack.css
@@ -88,7 +88,7 @@ section#main {
   -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.6);
   text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
   font-size: 1.2em;
-  background-color: #F06;
+  background-color: #F15A29;
   color: white;
   padding: 2px 10px;
   float: right;
